syntax = "proto2";

package auth;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/auth/config";

////////////////////////////////////////////////////////////////////////////////

message AuthConfig {
    optional bool DisableAuthorization = 1;
    optional string MetadataUrl = 2;
    optional string AccessServiceEndpoint = 3;
    optional string CertFile = 4;
    optional string ConnectionTimeout = 5 [default = "2s"];
    optional uint32 RetryCount = 6 [default = 7];
    optional string PerRetryTimeout = 7 [default = "2s"];
    optional string KeepAliveTime = 8 [default = "10s"];
    optional string KeepAliveTimeout = 9 [default = "1s"];
    optional string FolderId = 10;
    optional string AuthorizationCacheLifetime = 11 [default = "15s"];
}
